Feat: Add asset path aliases and new UI components for improved structure

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -5,6 +5,7 @@
       "@/*": ["src/*"],
       "@pages/*": ["./src/pages/*"],
       "@components/*": ["./src/components/*"],
+      "@assets/*": ["./src/assets/*"],
     },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
