--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cypress": "^14.1.0",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
@@ -43,6 +44,8 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@cypress/react": "^9.0.0",
+    "@cypress/webpack-dev-server": "^4.0.1",
     "@eslint/js": "^9.17.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -54,6 +57,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "html-minifier-terser": "^7.2.0",
     "jsdom": "^26.0.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
