Feat: Implemented E2E testing for initial setup and Login page

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,6 +8,7 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "baseUrl": ".",
+    "types": ["cypress", "node"],
     "paths": {
       "@/*": ["./src/*"],
       "@pages/*": ["./src/pages/*"],
